1999-02-01  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-metadata.c (lock): If the metatada directory is still
	locked after 30 seconds, claim metadata-lock ownership.

1999-01-27  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-config.c, gnome-exec.c, gnome-help.c, gnome-metadata.c:
	Include autoconf incantation for defining alloca.
	Surround config.h with #ifdef HAVE_CONFIG_H as necessary.

	* gnome-exec.c, gnome-magic.c, gnomelib-init.c:
	Add break statement to trailing default switch case.

	* gnome-popt.c, gnome-triggers.c:
	Remove unused alloca.h include.

1999-01-27  Raja R Harinath  <harinath@cs.umn.edu>

	* libgnome/Makefile.am (INCLUDES): Use a G_LOG_DOMAIN of `Gnome'.
	Suggested by Tim Janik <timj@gtk.org>.

1999-01-25  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* libgnome/gnome-util.c: Make the indentation be consistent.

1999-01-25  Ulrich Drepper (drepper@cygnus.com)

	* libgnome/gnome-config.c, libgnome/gnome-metadata.c,
	libgnome/gnome-mime-info.c: On systems that define getc_unlocked
	stdio is thread safe.  With locally opened files it is not
	necessary to use the locking.  Therefore POSIX (and gnu libc
	includes this feature) defines some _unlocked functions and they
	always should be used in these cases.

1999-01-21  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* libgnome/Makefile.am (INCLUDES):
	s%$(datadir)/locale%$(gnomelocaledir)%

	* libgnome/gnome-util.h (gnome_util_user_home): Use
	g_get_user_dir() from beloved GLIB instead of reding it from the
	environment.

	* libgnome/gnomelib-init.c (gnomelib_init): Use
	gnome_util_user_home() instead of doing it `by hand'.

1999-01-21  Havoc Pennington  <hp@pobox.com>

	* libgnome/gnome-triggers.c (gnome_triggers_play_sound): Don't 
	spew warnings if esound is not compiled in.

1999-01-20  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* libgnome/type.convert: Add files to do file convertions.

	* libgnome/gnome-fileconvert.c (gfc_read_FileConverters): Load